--- a/indexing-colab.ipynb
+++ b/indexing-colab.ipynb
@@ -8,7 +8,7 @@
     "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
     "</a>\n",
     "\n",
-    "# Search and Indexing\n",
+    "# Search and Indexing Algorithms\n",
     "\n",
     "\n",
     "> \"I don’t see how he can ever finish, if he doesn't begin.\"  \n",
@@ -86,6 +86,8 @@
     "import random\n",
     "import time\n",
     "import math\n",
+    "\n",
+    "%matplotlib inline\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -102,9 +104,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(15):\n",
-    "    barx = int(20*(i+1)/15) # bar is 20 char length\n",
-    "    print('\\r[{}{}] {}/{}'.format('x'*barx, '-'*(20-barx), i+1, 15), end='', flush=True)\n",
+    "n = 15\n",
+    "for i in range(n+1):\n",
+    "    barx = int(20*(i)/n) # bar is 20 char length\n",
+    "    print(f'\\r[{'x'*barx}{'-'*(20-barx)}] {i}/{n}', end='', flush=True)\n",
     "    time.sleep(0.1)\n"
    ]
   },
@@ -121,16 +124,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def very_simple_progress_bar(current, upper, size=20):\n",
+    "def very_simple_progress_bar(current, n, size=20):\n",
     "    '''\n",
     "    current    an integer indicating the current step\n",
-    "    upper      an integer indicating the number of iterations\n",
+    "    n          an integer indicating the number of iterations (inclusive)\n",
     "    size       the length of the progress bar\n",
     "    \n",
-    "    we assume the lower end is zero.\n",
+    "    We assume the lower end is zero.\n",
     "    '''\n",
-    "    barx = int(size*(current+1)/upper)\n",
-    "    print('\\r[{}{}] {}/{}'.format('x'*barx, '-'*(size-barx), current+1, upper), end='', flush=True)"
+    "    barx = int(size*(current)/n)\n",
+    "    print(f'\\r[{'x'*barx}{'-'*(size-barx)}] {current}/{n}', end='', flush=True)"
    ]
   },
   {
@@ -139,8 +142,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(15):\n",
-    "    very_simple_progress_bar(i, 15)\n",
+    "n - 15\n",
+    "for i in range(n+1):\n",
+    "    very_simple_progress_bar(i, n)\n",
     "    time.sleep(0.1)"
    ]
   },
@@ -159,10 +163,10 @@
    "source": [
     "target = 0.556\n",
     "times = []\n",
-    "upper = 101\n",
+    "upper = 100\n",
     "multiple = 100000\n",
     "\n",
-    "for i in range(1, upper):\n",
+    "for i in range(1, upper+1):\n",
     "    very_simple_progress_bar(i, upper)\n",
     "    i *= multiple\n",
     "    nums = [random.uniform(0, 10) for _ in range(i)]\n",
@@ -187,7 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(range(1, upper), times, label='Linear search')\n",
+    "plt.plot(range(1, upper+1), times, label='Linear search')\n",
     "plt.legend(loc='upper left')\n",
     "plt.xlabel('Number of items in list (x10,000)')\n",
     "plt.ylabel('Seconds')\n",
@@ -203,9 +207,9 @@
    "source": [
     "## Beyond linear search: a divide-and-conquer approach using binary search\n",
     "\n",
-    "Linear search works, but should not be considered as efficient. It can be the last resort if we don't have other ways to find useful info. In many cases, we do have other ways. Think about how we use the physical dictionary or the index of a book: we rarely start from the very beginning. Instead, we use a mechanism called divide-and-conquer. We are going to explore this mechanism here and then we will see how we can develop a data structure (called a tree) to naturally facilitate this. In this part of the tutorial, we will also encounter some nuances of Python as a programming language.\n",
+    "Linear search works, but it should not be considered as efficient. It can be the last resort if we don't have other ways to find useful info. In many cases, we do have other ways. Think about how we use the physical dictionary or the index of a book: we rarely start from the very beginning. Instead, we use a mechanism called divide-and-conquer. We are going to explore this mechanism here and then we will see how we can develop a data structure (called a tree) to naturally facilitate this. In this part of the tutorial, we will also encounter some nuances of Python as a programming language.\n",
     "\n",
-    "We first get a lot of points:"
+    "We first get a lot of random points. Here we simply use a list of two numbers as a point. Later in this class we will use the Point class."
    ]
   },
   {
@@ -221,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `in` operator in Python does not assume the order of items in a list and can be treated as [a linear search](https://stackoverflow.com/questions/13884177/complexity-of-in-operator-in-python) in general. Though later we will see there is a lot going into this."
+    "The `in` operator in Python does not assume the items in a list are ordered and can be treated as [a linear search](https://stackoverflow.com/questions/13884177/complexity-of-in-operator-in-python) in general. Though later we will see there is a lot going into this."
    ]
   },
   {
@@ -230,10 +234,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "t1 = time.time()\n",
     "target in nums\n",
     "t2 = time.time()\n",
     "print(t2-t1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Previously we record the computing time using the `time` module. By putting this in a function, we can report the time used in a more nuanced way. If we just want to see how much time is used by the code in a cell, we can use what is called a **cell magic** command in Jupyter notebook to do this. There are two kinds of magic commands. The first one is called a line magic. We have seen this a lot when we use the following\n",
+    "\n",
+    "```\n",
+    "%matplotlib inline\n",
+    "```\n",
+    "\n",
+    "to force the output (graphics) of matplotlib to be embedded in the document. A line magic is effective only for that line. But a cell magic will do something for the entire cell and we only use the following to get the time used by the code in the cell:\n",
+    "\n",
+    "```\n",
+    "%%time\n",
+    "```\n",
+    "\n",
+    "This is what we get in the above cell."
    ]
   },
   {
@@ -267,19 +291,32 @@
    },
    "outputs": [],
    "source": [
-    "t1 = time.time()\n",
-    "target in nums\n",
-    "t2 = time.time()\n",
-    "print(t2-t1)"
+    "%%time\n",
+    "target in nums"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So there is a surprise here! The exact same code  (using the `in` operator) is used here, but the performance is a lot worse. In Python, this is called cache misses, which has something to do with how Python lists are implemented. But we are not going to get into too this here (there is a lot of discussion on this on the web). Instead, let's just take the worse case (the numbers are reshuffled and sorted) and see if we can devise a new search mechanism like we use the dictionary: we start from somewhere in the middle. With the help of code, we can start exactly at the middle. If the number to find is greater than the one in the middle, we only need to search for the half where all is smaller than the target. This mechanism is called divide-and-conquer in general, and in our specific case, it is called binary search because we continuously divide the numbers to be searched into two halves and only focus on one of the two halves.\n",
+    "So sorting doesn't seem to help. Even though we use the exact same code  (using the `in` operator), the performance getting a lot worse. In Python, this issue is called cache misses, which has something to do with how Python lists are implemented. But we are not going to get into too this here (there is a lot of discussion on this on the web). \n",
     "\n",
-    "Our first shot at this idea is based on the use of list slicing."
+    "## Binary search: two implementations\n",
+    "\n",
+    "Now, let's take the sorted list and see if we can devise a new search mechanism like we use the dictionary: we start from somewhere in the middle. If the number to find is greater than the one in the middle, we only need to search for the half where all is smaller than the target. This mechanism is called **divide-and-conquer** in general, and in our specific case, it is called **binary search** because we continuously divide the numbers to be searched into two halves and only focus on one of the two halves. Our first shot at this idea is based on the use of list slicing and we can use the following pseudo code to describe the process:\n",
+    "\n",
+    "```\n",
+    "while data:\n",
+    "    mid = len(data)/2\n",
+    "    if data[mid] == target:\n",
+    "        break\n",
+    "    if data[mid] < target:\n",
+    "        data = data[:mid]\n",
+    "    else:\n",
+    "        data = data[mid+1:]\n",
+    "```\n",
+    "\n",
+    "Here is the implementation:"
    ]
   },
   {
@@ -288,9 +325,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "found = False\n",
+    "%%time\n",
+    "\n",
     "to_search = nums\n",
-    "t1 = time.time()\n",
     "\n",
     "# TODO: \n",
     "# \n",
@@ -300,18 +337,16 @@
     "# Otherwise, use the right half for the next iteration.\n",
     "#\n",
     "\n",
-    "\n",
-    "t2 = time.time()\n",
-    "t2 - t1"
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So, the code should work. But is it embarrassing that the divide-and-conquer method is even worse than the use of the `in` operator?  The `in` operator is supposed to be a brute-force linear search even when the list is sorted (the operator doesn't check if the list is sorted or not). It might be because the Python built-in stuff has some secrete way that can perform better, and our implementation of the binary search above is not optimal at all. The way we continuously reassign the sliced list to `to_search` is indeed expensive in terms of computing time. \n",
+    "So, the code works. But is it embarrassing that the divide-and-conquer method is even worse than the use of the `in` operator?  The `in` operator is supposed to be a brute-force linear search even when the list is sorted (the operator doesn't check if the list is sorted or not). It might be because the Python built-in stuff has some secrete way that can perform better, and our implementation of the binary search above is not optimal at all. The way we continuously reassign the sliced list to `to_search` is indeed expensive in terms of computing time. \n",
     "\n",
-    "The following linear search should also show that the built-in Python operation may indeed have its advantages."
+    "It is possible to write a more efficient program. As hinted above, our original divide-and-conquer method is held back by the use of slicing and assignment statements. The code below doesn't go that rout. Instead, we dynamically calculate the range of the numbers that must be checked out. Anything outside that range can then be ignored."
    ]
   },
   {
@@ -320,42 +355,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t1 = time.time()\n",
-    "for num in nums:\n",
-    "    if target == num:\n",
-    "        print('True')\n",
-    "        break\n",
-    "t2 = time.time()\n",
-    "t2 - t1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Two things can be noticed here. First, technically, the above linear search should mimic exactly what is done using the `in` operator. But yet the computing time is way longer than the built-in in operator. The second is more of a positive note: our divide-and-conquer method does improve upon the linear search. But can we do even better? \n",
-    "\n",
-    "The goal here is not write code that tries to beat the built-in functions. Instead, we are going to show that even we don't have the advantage, we can still write programs that are extremely good. As hinted above, our original divide-and-conquer method is held back by the use of slicing and assignment statements. The code below doesn't go that rout. Instead, we dynamically calculate the range of the numbers that must be checked out. Anything outside that range can then be ignored."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t1 = time.time()\n",
+    "%%time\n",
     "\n",
     "# TODO\n",
     "#\n",
     "# Rewrite the divide-and-conquer so that we calculate the start and end positions \n",
-    "# for the next round of search in every interation.\n",
+    "# for the next round of search in every iteration.\n",
     "#\n",
     "\n",
-    "\n",
-    "\n",
-    "t2 = time.time()\n",
-    "t2 - t1"
+    "\n"
    ]
   },
   {
@@ -378,6 +386,7 @@
     "    '''data must be sorted ascendingly'''\n",
     "\n",
     "\n",
+    "    \n",
     "target = 0.556\n",
     "t1 = time.time()\n",
     "print(search_list_binary(nums, target))\n",
@@ -401,10 +410,10 @@
     "target = 0.556\n",
     "times = []\n",
     "lower = 1\n",
-    "upper = 101\n",
+    "upper = 100\n",
     "multiple = 100000\n",
     "\n",
-    "for i in range(lower, upper):\n",
+    "for i in range(lower, upper+1):\n",
     "    very_simple_progress_bar(i, upper)\n",
     "    i *= multiple\n",
     "    nums = [random.uniform(0, 10) for _ in range(i)]\n",
@@ -429,7 +438,7 @@
    "outputs": [],
    "source": [
     "times_1m = [t*1000000 for t in times]\n",
-    "plt.plot(range(lower, upper), times_1m, color='#ee6565', label='Binary search')\n",
+    "plt.plot(range(lower, upper+1), times_1m, color='#ee6565', label='Binary search')\n",
     "plt.legend(loc='upper left')\n",
     "plt.xlabel('Number of items in list (x10,000)')\n",
     "plt.ylabel('Millionth seconds')\n",
@@ -460,7 +469,15 @@
     "```\n",
     "***\n",
     "\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
     "\n",
     "## Search using a tree structure\n",
     "\n",
@@ -618,6 +635,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!rm -rf indexing\n",
     "!git clone https://github.com/gisalgs/indexing.git "
    ]
   },
@@ -851,7 +869,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
