--- a/recursive-functions-colab.ipynb
+++ b/recursive-functions-colab.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "<a href=\"https://colab.research.google.com/github/gisalgs/notebooks/blob/main/recursive-functions-colab.ipynb\">\n",
     "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
@@ -45,23 +43,16 @@
     "\n",
     "When we first run `countdown(3)`, we will print a 3 and then call `countdown` again with an argument of 2. However, at this point, the call of `countdown(3)` has not effectively ended yet, because we have not reached the end of the function. The end of the function will be reached **after** the call of `countdown(2)` ends, which of course will not end until the call of `countdown(1)` ends, and so on. At the end of each call of `countdown`, we don't do anything except for returning a value of `None`.\n",
     "\n",
+    "## TODO\n",
+    "\n",
     "We now use the following diagram to capture the whole process. Here we use the vertical bar (|) to represent some unfinished business that must be taken care of when the chain of calls is done. A plus sign (+) is used to denote the actual execution of a statement. (Note: the skeleton of this diagram was produced using a trace function at [here](http://anandology.com/python-practice-book/functional-programming.html).)\n",
+    "\n",
+    "**Make sure to complete the following text diagram.**\n",
     "\n",
     "```\n",
     "Function calls                         Output (print)\n",
     "\n",
-    "+-- countdown(3)\n",
-    "|  +-- print(3)                         3\n",
-    "|  +-- countdown(2)\n",
-    "|  |  +-- print(2)                      2\n",
-    "|  |  +-- countdown(1)\n",
-    "|  |  |  +-- print(1)                   1\n",
-    "|  |  |  +-- countdown(0)\n",
-    "|  |  |  |  +-- print('DONE!')          DONE!\n",
-    "|  |  |  |  +-- return None\n",
-    "|  |  |  +-- return None\n",
-    "|  |  +-- return None\n",
-    "|  +-- return None\n",
+    "\n",
     "```\n",
     "\n",
     "We can make a few changes to make the countdown process faster. Let's change the last line in the function to the following two and see what happens.\n",
@@ -71,7 +62,7 @@
     "countdown(n//10)\n",
     "```\n",
     "\n",
-    "For the sake of comparison, we can achieve the same thing counting down effect using a loop. "
+    "For the sake of comparison, we can achieve the same counting down effect using a loop. "
    ]
   },
   {
@@ -88,7 +79,9 @@
     "def countdown_loop(n):\n",
     "    pass\n",
     "\n",
-    "        \n",
+    "\n",
+    "\n",
+    "\n",
     "countdown_loop(3)"
    ]
   },
@@ -124,26 +117,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When we first call the function in `countdown2(3)`, we print out `3`, call the function with an input of 2, and then print out another 3. However, the second print must wait until `countdown2(2)` finishes. So in between the two print of 3, there is a lot to happen: we call `countdown2(2)`, which prints 2, call `countdown2(1)`, and then print 2, where the second print of 2 needs to wait until `countdown2(1)` to finish, and so on. The following diagram should explain the process:\n",
+    "## TODO\n",
+    "\n",
+    "When we first call the function in `countdown2(3)`, we print out `3`, call the function with an input of 2, and then print out another 3. However, the second print must wait until `countdown2(2)` finishes. So in between the two print of 3, there is a lot to happen: we call `countdown2(2)`, which prints 2, call `countdown2(1)`, and then print 2, where the second print of 2 needs to wait until `countdown2(1)` to finish, and so on. The following diagram should explain the process. **Make sure to complete this.**\n",
     "\n",
     "```\n",
     "Function calls                          Output (print)\n",
     "\n",
     "+-- countdown2(3)\n",
-    "|  +-- print(3)                         3\n",
-    "|  +-- countdown2(2)\n",
-    "|  |  +-- print(2)                      2\n",
-    "|  |  +-- countdown2(1)\n",
-    "|  |  |  +-- print(1)                   1\n",
-    "|  |  |  +-- countdown2(0)\n",
-    "|  |  |  |  +-- print 'DONE!'           DONE!\n",
-    "|  |  |  |  +-- return None\n",
-    "|  |  |  +-- print(1)                   1\n",
-    "|  |  |  +-- return None\n",
-    "|  |  +-- print(2)                      2\n",
-    "|  |  +-- return None\n",
-    "|  +-- print(3)                         3\n",
-    "|  +-- return None\n",
+    "| \n",
+    "| \n",
+    "| \n",
+    "| \n",
+    "\n",
     "```"
    ]
   },
@@ -166,7 +152,9 @@
     "\n",
     "def countdown2_loop(n):\n",
     "    pass\n",
-    "            \n",
+    "\n",
+    "\n",
+    "\n",
     "            \n",
     "countdown2_loop(3)"
    ]
@@ -207,7 +195,7 @@
    "source": [
     "We can definitely change this default number. But doing so comes to a cost because when Python makes a recursive function call, it has to push the current run of function into a stack. The more recursive function calls we make, the deeper the stack (this is why the error message says recursion depth), and the more computer memory will be used. Python has to make a firm limit of the maximum number of recursions so that it does not abuse the other very limited computer memory. This is a great feature of Python -- some other computer programming languages do not enforce this and therefore may often crush the computers. \n",
     "\n",
-    "## Calculating the sum of a number list recursively\n",
+    "## Calculating the sum of a number list recursively (optional)\n",
     "\n",
     "Now we are going to revisit something we have seen before: how to compute the sum of a list of numbers. At this point of this class, we should know this algorithm well -- we literally go through each item in the list and add it to a variable that is initially set to zero. We will use an unsorted list of numbers called `my_nums` to test this procedure."
    ]
@@ -299,7 +287,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So it gives us exactly as what we got using the traditional approach as implemented in function `total`. How does this work then? We will again using a diagram to trace what happens throughout the function calls. We must note one fact to understand the mechanism in our particular function. When the `if` condition is false, the code goes to the last line. This one-liner, however, contains another function call (self-calling) and therefore Python will hold the addition but go ahead to call that function first. Now we know this call will fire up another call, and another...until we reach the base case that returns the last item in the last. From there, all addition operations held so far will be carried out in an opposite order as they are called -- the addition involving the first item in the list, 6, will be done last.\n",
+    "So it gives us exactly as what we got using the traditional approach as implemented in function `total`. How does this work then? We will again use a diagram to trace what happens throughout the function calls. We must note one fact to understand the mechanism in our particular function. When the `if` condition is false, the code goes to the last line. This one-liner, however, contains another function call (self-calling) and therefore Python will hold the addition because the right side of the addition symbol is an expression that must be evaluated before the actual addition operation can be carried out. So the code goes ahead to call that function first. Now we know this call will fire up another call, and another...until we reach the base case (when the `if` condition is true) that returns the last item at the last. From there, all addition operations that have been held so far will be carried out in an opposite order as they are called -- the addition involving the first item in the list, 6, will be done last. \n",
     "\n",
     "\n",
     "```\n",
@@ -353,10 +341,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color=\"green\">TODO</font>\n",
-    "\n",
-    "The following diagram shows how function `rtotal2` works when given an input of `[6, 3, 10, 8]`. Please replace the parts marked by the question marks with the actual function call or the output. Double-click on this cell to start editing. The text below are enclosed in three backticks (\\`\\`\\`) so that the context will be rendered in fixed width typeface. After editing is done, click on the run button in the toolbar (or press Shift-Enter or Ctrl-Enter) to display the cell.\n",
-    "\n",
+    "The following diagram shows how function `rtotal2` works when given an input of `[6, 3, 10, 8]`. Please replace the parts marked by the question marks with the actual function call or the output.\n",
     "\n",
     "```\n",
     "Function calls                            Output (return)\n",
@@ -371,10 +356,11 @@
     "|  |  |  +-- return 0                     0\n",
     "|  |  +-- return 3 + 6 + 0                9\n",
     "|  +-- rtotal2([8])\n",
-    "|  |  +-- ??                              ?\n",
-    "|  +-- ??                                 ?\n",
+    "|  |  +-- return 8                        8\n",
+    "|  +-- return 10 + 9 + 8                  27\n",
     "\n",
-    "```\n"
+    "```\n",
+    "\n"
    ]
   },
   {
@@ -431,7 +417,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -473,7 +460,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -487,9 +474,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
