Introduction to indexing

--- a/indexing-colab.ipynb
+++ b/indexing-colab.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "## Linear search and time complexity\n",
     "\n",
-    "The simplest form of search is called **linear search**, which is a process that goes through all the items in our data and the search will stop when we either find the item we are searching for or we reach the end of all the items. Let us assume we have a list of numbers named `nums` (e.g., `nums = [1, 2, 9, 12, 15, 29, 32, 91, 4, 11]` or `num = [1, 2, 3, 4, 5, 6, 7]`) and we want to find if number `j` is in the list. The following is the linear search algorithm:\n",
+    "The simplest form of search is called **linear search**, which is a process that goes through all the items in our data and the search will stop when we either find the item we are searching for or we reach the end of all the items. Let us assume we have a list of numbers named `nums` (e.g., `nums = [1, 2, 9, 12, 15, 29, 32, 91, 4, 11]` or `nums = [1, 2, 3, 4, 5, 6, 7]`) and we want to find if number `j` (any number) is in the list. The following is the linear search algorithm:\n",
     "\n",
     "***\n",
     "```\n",
@@ -310,13 +310,13 @@
     "    mid = len(data)/2\n",
     "    if data[mid] == target:\n",
     "        break\n",
-    "    if data[mid] < target:\n",
-    "        data = data[:mid]\n",
+    "    if the data item in the middle is smaller than target:\n",
+    "        set data to the first half of itself (excluding self)\n",
     "    else:\n",
-    "        data = data[mid+1:]\n",
+    "        set data to the second half of itself (excluding self)\n",
     "```\n",
     "\n",
-    "Here is the implementation:"
+    "Below is the implementation. Again, we must make sure data is **sorted** in an ascending fashion. In our case, if all the cells are run sequentially, the list `nums` should be sorted. In order to avoid changing the content of the original list, we make a copy of it and work on the copy."
    ]
   },
   {
@@ -327,7 +327,8 @@
    "source": [
     "%%time\n",
     "\n",
-    "to_search = nums\n",
+    "import copy\n",
+    "to_search = copy.copy(nums)\n",
     "\n",
     "# TODO: \n",
     "# \n",
@@ -481,7 +482,9 @@
     "\n",
     "## Search using a tree structure\n",
     "\n",
-    "What we have explored so far is to **search** for something useful from a set of data. More specifically, what we have seen is a way of linear search: we just go from one end of the data to the other end. A linear search can work, but there are better ways to find info from a list. Let's consider what will happen if we re-arrange the data in the original list into a special tree structure as illustrated below:\n",
+    "What we have explored so far is to **search** for something useful from a set of data. The binary search algorithm is efficient. What is its time complexity (running time)? To answer this, we are not going to look at the algorithm per se. Instead, we are going to construct a particular data structure using a tree metaphor and we will demonstrate it is equivalent to the divide-and-conquer approach when we have a systematic way to search using the tree structure. \n",
+    "\n",
+    "Let's consider what will happen if we re-arrange the data in the original list into a special tree structure as illustrated below:\n",
     "\n",
     "<img src=\"figures/trees-2.png\" width=300/>\n",
     "\n",
