Intro to indexing

--- a/indexing-colab.ipynb
+++ b/indexing-colab.ipynb
@@ -107,7 +107,7 @@
     "n = 15\n",
     "for i in range(n+1):\n",
     "    barx = int(20*(i)/n) # bar is 20 char length\n",
-    "    print(f'\\r[{'x'*barx}{'-'*(20-barx)}] {i}/{n}', end='', flush=True)\n",
+    "    print(f\"\\r[{'x'*barx}{'-'*(20-barx)}] {i}/{n}\", end='', flush=True)\n",
     "    time.sleep(0.1)\n"
    ]
   },
@@ -115,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The above test sounds all we need. If we really want, we can replace the 'x' with a special character of block. But it is not necessary. Now, we make a function so it is easy to use."
+    "The above test sounds all we need. If we really want, we can replace the 'x' with a special character of block. But it is not necessary. Now, we make a function so it is easy to use. It is necessary to note that some Python or iPython environments accept an f-string in single quotes where the strings in placeholders (braces) are also in single quotes. But to be safe, we use double quotes for the f-string and single for the strings inside placeholders."
    ]
   },
   {
@@ -133,7 +133,7 @@
     "    We assume the lower end is zero.\n",
     "    '''\n",
     "    barx = int(size*(current)/n)\n",
-    "    print(f'\\r[{'x'*barx}{'-'*(size-barx)}] {current}/{n}', end='', flush=True)"
+    "    print(f\"\\r[{'x'*barx}{'-'*(size-barx)}] {current}/{n}\", end='', flush=True)"
    ]
   },
   {
