--- a/computational_issues-colab.ipynb
+++ b/computational_issues-colab.ipynb
@@ -10,6 +10,8 @@
     "\n",
     "# Computational Issues of Spatial Indexing\n",
     "\n",
+    "November 26, 2024\n",
+    "\n",
     ">\"How long does getting thin take?\" asked Pooh anxiously.  \n",
     ">\"About a week, I should think.\"  \n",
     ">\"But I can't stay here for a *week*!\"  \n",
@@ -123,6 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "def test(npts, n, verbose=False):\n",
     "    points = [Point(random(), random()) for i in range(npts)]\n",
     "    time1 = time.time()\n",
@@ -207,6 +210,7 @@
    },
    "outputs": [],
    "source": [
+    "%%time\n",
     "time1 = time.time()\n",
     "n = 100\n",
     "alltime = []\n",
@@ -261,7 +265,22 @@
     "\n",
     "(total computing time 2.7 minutes, Total processing time 2.6 minutes, Total time on trees 1.8 minutes, Tree construction time 1.8 minutes)\n",
     "\n",
-    "Intel Next Computing Unit (NUC) 10, released in 2020, with Intel Core i7-10710U CPU 1.10GHz and 16 GB RAM, running Python 3.12 in Jupyter notebook on Fedora Linux 39 (Workstation Edition):\n",
+    "Intel Next Computing Unit (NUC) 10, released in 2020, with Intel Core i7-10710U CPU 1.10GHz and 16 GB RAM, running Python 3.13 in Jupyter notebook on Fedora Linux 41 (Workstation Edition), as of November 26, 2024:\n",
+    "\n",
+    "```\n",
+    " 100000 |  1.105  0.511  1.043 |  0.003  0.002  0.002 |  2.010\n",
+    " 200000 |  2.591  1.665  2.398 |  0.002  0.002  0.002 |  3.688\n",
+    " 300000 |  3.894  2.303  3.812 |  0.003  0.002  0.002 |  5.779\n",
+    " 400000 |  5.595  3.233  5.448 |  0.003  0.002  0.002 |  7.805\n",
+    " 500000 |  6.996  4.230  7.070 |  0.003  0.002  0.002 | 11.050\n",
+    " 600000 |  9.117  5.758  8.027 |  0.003  0.002  0.002 | 12.730\n",
+    " 700000 | 10.579  6.481 10.364 |  0.003  0.002  0.002 | 14.667\n",
+    " 800000 | 12.317  7.555 11.235 |  0.003  0.002  0.002 | 16.173\n",
+    " 900000 | 14.985  8.695 13.759 |  0.003  0.002  0.003 | 19.574\n",
+    "1000000 | 16.098 10.597 14.199 |  0.003  0.002  0.002 | 20.015\n",
+    "```\n",
+    "\n",
+    "The same Intel Next Computing Unit, running Python 3.12 in Jupyter notebook on Fedora Linux 39 (Workstation Edition):\n",
     "\n",
     "```\n",
     " 100000 |  1.394  0.658  1.144 |  0.002  0.001  0.002 |  1.520\n",
@@ -276,7 +295,7 @@
     "1000000 | 18.990 10.767 18.590 |  0.004  0.002  0.003 | 25.214\n",
     "```\n",
     "\n",
-    "On the same hardward ((NUC 10), running Python 3.10 in Jupyter notebook on Ubuntu Linux 20.04 LTS:\n",
+    "On the same hardware ((NUC 10), running Python 3.10 in Jupyter notebook on Ubuntu Linux 20.04 LTS:\n",
     "\n",
     "```\n",
     " 100000 |  1.920  0.828  2.066 |  0.005  0.003  0.004 |  2.368\n",
@@ -322,7 +341,23 @@
     "1000000 | 46.114 19.159 41.113 |  0.008  0.004  0.006 | 35.620\n",
     "```\n",
     "\n",
-    "A run on November 27, 2021 using Google Colab (Intel(R) Xeon(R) CPU @ 2.20GHz):\n",
+    "Let's compare the running on Google Colab in different settings. This is the most recent run on November 26, 2024 where the CPU is Intel(R) Xeon(R) CPU @ 2.20GHz\n",
+    "on Python 3.10.12:\n",
+    "\n",
+    "```\n",
+    " 100000 |  2.980  1.361  2.561 |  0.007  0.003  0.005 |  3.801\n",
+    " 200000 |  6.925  3.419  6.632 |  0.007  0.003  0.004 |  6.454\n",
+    " 300000 | 11.023  5.856 10.438 |  0.007  0.004  0.005 | 10.545\n",
+    " 400000 | 16.112  7.568 15.027 |  0.007  0.004  0.005 | 14.083\n",
+    " 500000 | 21.305 10.493 17.540 |  0.008  0.004  0.005 | 17.092\n",
+    " 600000 | 25.216 11.802 23.009 |  0.008  0.004  0.005 | 19.816\n",
+    " 700000 | 31.459 13.691 27.213 |  0.008  0.004  0.005 | 24.672\n",
+    " 800000 | 36.653 16.216 33.170 |  0.008  0.004  0.005 | 26.898\n",
+    " 900000 | 41.014 18.760 35.908 |  0.008  0.004  0.005 | 34.367\n",
+    "1000000 | 46.756 21.700 40.825 |  0.008  0.004  0.005 | 35.964\n",
+    "```\n",
+    "\n",
+    "The following was on November 27, 2021 using Google Colab (Intel(R) Xeon(R) CPU @ 2.20GHz) on an un-recorded Python version but should be 3.8 or 3.9 as shown in [https://devguide.python.org/versions/](https://devguide.python.org/versions/):\n",
     "\n",
     "```\n",
     " 100000 |  3.867  1.145  3.501 |  0.006  0.003  0.005 |  3.912\n",
@@ -452,7 +487,7 @@
     "\n",
     "We first define a few functions to make it convenient for testing different cases.\n",
     "\n",
-    "A note on changes: The textbook has the following line to create random points. \n",
+    "A note on changes: the textbook (*GIS Algorithms*) has the following line to create random points. \n",
     "\n",
     "`randpoints0 = [Point(randrange(xmin, xmax), randrange(ymin, ymax)) for i in range(npts)]`\n",
     "\n",
@@ -554,6 +589,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "results = []\n",
     "for npts in range(100000, 1000001, 100000):\n",
     "    for w in [25, 50, 100, 200, 400, 600, 800]:\n",
@@ -738,22 +774,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true,
     "tags": []
    },
    "outputs": [],
    "source": [
     "numsubplots = len(sizes)\n",
-    "fig, axs = plt.subplots(1, numsubplots, sharey=True)\n",
+    "\n",
+    "_, axs = plt.subplots(1, numsubplots, sharey=True)\n",
     "panel_label_y = 1.1 * max(new_data[sizes[-1]][1]) # get Y position of panel labels\n",
     "\n",
     "i = 0\n",
     "for w in sizes:\n",
-    "    axs[i].plot(new_data[w][0], new_data[w][1], color='k', label='k-D tree')\n",
+    "    axs[i].plot(new_data[w][0], new_data[w][1], color='grey', label='k-D tree')\n",
     "    axs[i].plot(new_data[w][0], new_data[w][2], color='r', label='Linear')\n",
     "    #plt.xticks([sizes[j]/100 for j in range(len(sizes)) if j%3==0])\n",
     "    axs[i].xaxis.set_ticks([2, 4, 6, 8])\n",
-    "    axs[i].text(0.5, panel_label_y, str(w//1000)+'K')\n",
+    "    axs[i].text(0.5, panel_label_y, f'{w//1000}K')\n",
     "    i += 1\n",
     "    \n",
     "axs[5].set_xlabel('Width of rectangle (x100)')\n",
@@ -831,6 +867,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "results_nn = []\n",
     "for npts in range(200000, 1000001, 200000):\n",
     "    for n in [25, 50, 100, 200, 400, 800]:\n",
@@ -846,8 +883,7 @@
    "source": [
     "## <font color=\"red\">Question 2</font>\n",
     "\n",
-    "Plot a figure that can show the time complexity trend of nearest neighbor search using a tree  (either a k-D tree or a point quadtree will be fine) from the above experiment. Again, we don't need to re-run the code. Instead, use the results printed above , where the first two lines of the printout look like this:\n",
-    "\n",
+    "Plot a figure that can show the time complexity trend of nearest neighbor search using a tree (a k-D tree, a point quadtree, or both) from the above experiment. Again, we don't need to re-run the code. Instead, use the results printed above, where the first two lines of the printout look like this:\n",
     "\n",
     "```\n",
     "(200000, 25, 0.0004232645034790039, 0.0017875194549560546, 0.3703118324279785),\n",
@@ -954,7 +990,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
