--- a/computational_issues-colab.ipynb
+++ b/computational_issues-colab.ipynb
@@ -125,7 +125,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
     "def test(npts, n, verbose=False):\n",
     "    points = [Point(random(), random()) for i in range(npts)]\n",
     "    time1 = time.time()\n",
@@ -170,8 +169,7 @@
     "        t4 = t4 + time2-time1\n",
     "\n",
     "    if verbose:\n",
-    "        print(\"{0:7} | {1:6.3f} {2:6.3f} {3:6.3f} | {4:6.3f} {5:6.3f} {6:6.3f} | {7:6.3f}\".format(\n",
-    "            npts, treet1, treet2, treet3, t1, t2, t3, t4))\n",
+    "        print(f'{npts:7} | {treet1:6.3f} {treet2:6.3f} {treet3:6.3f} | {t1:6.3f} {t2:6.3f} {t3:6.3f} | {t4:6.3f}')\n",
     "    return npts, treet1, treet2, treet3, t1, t2, t3, t4"
    ]
   },
@@ -236,156 +234,17 @@
     "t2 = sum([sum(alltime[i][1:]) for i in range(len(alltime))])/60\n",
     "t3 = sum([sum(alltime[i][1:7]) for i in range(len(alltime))])/60\n",
     "t4 = sum([sum(alltime[i][1:4]) for i in range(len(alltime))])/60\n",
-    "print('total computing time: {:.1f} minutes'.format(t1))\n",
-    "print('Total processing time: {:.1f} minutes'.format(t2))\n",
-    "print('Total time on trees: {:.1f} minutes'.format(t3))\n",
-    "print('Tree construction time: {:.1f} minutes'.format(t4))"
+    "print(f'total computing time: {t1:.1f} minutes')\n",
+    "print(f'Total processing time: {t2:.1f} minutes')\n",
+    "print(f'Total time on trees: {t3:.1f} minutes')\n",
+    "print(f'Tree construction time: {t4:.1f} minutes')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As a way of comparison, the following shows previous results on different platforms.\n",
-    "\n",
-    "Apple Macbook Air M2, running Python 3.12 in Jupyter notebook on Sonoma 14.0:\n",
-    "\n",
-    "```\n",
-    " 100000 |  0.532  0.311  0.400 |  0.001  0.000  0.001 |  0.357\n",
-    " 200000 |  1.256  0.705  1.149 |  0.001  0.001  0.001 |  1.279\n",
-    " 300000 |  2.005  1.132  1.913 |  0.001  0.001  0.001 |  2.359\n",
-    " 400000 |  2.847  1.492  2.653 |  0.001  0.001  0.001 |  3.366\n",
-    " 500000 |  3.609  2.171  3.722 |  0.001  0.001  0.002 |  4.934\n",
-    " 600000 |  4.260  2.566  4.417 |  0.001  0.001  0.001 |  6.292\n",
-    " 700000 |  5.412  2.888  5.721 |  0.002  0.001  0.002 |  5.814\n",
-    " 800000 |  6.151  3.757  6.402 |  0.002  0.001  0.002 |  6.739\n",
-    " 900000 |  7.304  3.993  7.982 |  0.002  0.001  0.002 |  8.978\n",
-    "1000000 |  7.990  4.825  8.427 |  0.002  0.001  0.002 | 10.055\n",
-    "```\n",
-    "\n",
-    "(total computing time 2.7 minutes, Total processing time 2.6 minutes, Total time on trees 1.8 minutes, Tree construction time 1.8 minutes)\n",
-    "\n",
-    "Intel Next Computing Unit (NUC) 10, released in 2020, with Intel Core i7-10710U CPU 1.10GHz and 16 GB RAM, running Python 3.13 in Jupyter notebook on Fedora Linux 41 (Workstation Edition), as of November 26, 2024:\n",
-    "\n",
-    "```\n",
-    " 100000 |  1.105  0.511  1.043 |  0.003  0.002  0.002 |  2.010\n",
-    " 200000 |  2.591  1.665  2.398 |  0.002  0.002  0.002 |  3.688\n",
-    " 300000 |  3.894  2.303  3.812 |  0.003  0.002  0.002 |  5.779\n",
-    " 400000 |  5.595  3.233  5.448 |  0.003  0.002  0.002 |  7.805\n",
-    " 500000 |  6.996  4.230  7.070 |  0.003  0.002  0.002 | 11.050\n",
-    " 600000 |  9.117  5.758  8.027 |  0.003  0.002  0.002 | 12.730\n",
-    " 700000 | 10.579  6.481 10.364 |  0.003  0.002  0.002 | 14.667\n",
-    " 800000 | 12.317  7.555 11.235 |  0.003  0.002  0.002 | 16.173\n",
-    " 900000 | 14.985  8.695 13.759 |  0.003  0.002  0.003 | 19.574\n",
-    "1000000 | 16.098 10.597 14.199 |  0.003  0.002  0.002 | 20.015\n",
-    "```\n",
-    "\n",
-    "The same Intel Next Computing Unit, running Python 3.12 in Jupyter notebook on Fedora Linux 39 (Workstation Edition):\n",
-    "\n",
-    "```\n",
-    " 100000 |  1.394  0.658  1.144 |  0.002  0.001  0.002 |  1.520\n",
-    " 200000 |  2.987  1.643  2.712 |  0.003  0.002  0.002 |  4.504\n",
-    " 300000 |  4.700  2.528  4.260 |  0.003  0.002  0.003 |  7.331\n",
-    " 400000 |  6.576  3.942  6.142 |  0.003  0.002  0.003 |  9.911\n",
-    " 500000 |  8.363  5.093  8.054 |  0.003  0.002  0.003 | 13.741\n",
-    " 600000 | 10.666  6.413 10.017 |  0.003  0.002  0.003 | 16.353\n",
-    " 700000 | 12.510  7.072 12.456 |  0.003  0.002  0.003 | 19.033\n",
-    " 800000 | 14.909  9.067 14.350 |  0.004  0.002  0.003 | 21.850\n",
-    " 900000 | 16.668 10.313 15.352 |  0.004  0.002  0.003 | 23.592\n",
-    "1000000 | 18.990 10.767 18.590 |  0.004  0.002  0.003 | 25.214\n",
-    "```\n",
-    "\n",
-    "On the same hardware ((NUC 10), running Python 3.10 in Jupyter notebook on Ubuntu Linux 20.04 LTS:\n",
-    "\n",
-    "```\n",
-    " 100000 |  1.920  0.828  2.066 |  0.005  0.003  0.004 |  2.368\n",
-    " 200000 |  4.247  1.914  3.836 |  0.005  0.003  0.003 |  5.215\n",
-    " 300000 |  6.216  3.260  6.228 |  0.005  0.003  0.004 |  8.613\n",
-    " 400000 |  8.719  4.391  9.310 |  0.006  0.003  0.004 | 12.813\n",
-    " 500000 | 11.204  5.569 11.880 |  0.005  0.003  0.004 | 14.315\n",
-    " 600000 | 14.169  6.801 14.790 |  0.005  0.003  0.004 | 18.673\n",
-    " 700000 | 16.430  8.005 17.451 |  0.006  0.003  0.004 | 19.009\n",
-    " 800000 | 19.018  9.822 18.863 |  0.006  0.003  0.004 | 24.452\n",
-    " 900000 | 22.156 11.036 23.006 |  0.006  0.003  0.004 | 26.543\n",
-    "1000000 | 24.699 12.680 24.078 |  0.006  0.003  0.004 | 28.464\n",
-    "```\n",
-    "\n",
-    "Surface Pro 6 with 2.11 GHz Intel Core i7 and 8 GB RAM, using the Jupyter notebook on Windows 10:\n",
-    "\n",
-    "```\n",
-    " 100000 |  2.594  1.091  2.524 |  0.000  0.000  0.016 |  3.250\n",
-    " 200000 |  6.809  2.719  5.968 |  0.000  0.000  0.000 |  8.220\n",
-    " 300000 | 12.339  4.629  8.893 |  0.001  0.001  0.000 | 10.954\n",
-    " 400000 | 15.386  5.906 12.799 |  0.047  0.001  0.000 | 15.611\n",
-    " 500000 | 19.815  7.579 16.616 |  0.016  0.000  0.016 | 18.221\n",
-    " 600000 | 24.587 10.533 21.079 |  0.016  0.000  0.000 | 23.317\n",
-    " 700000 | 29.092 12.926 24.468 |  0.001  0.000  0.000 | 24.379\n",
-    " 800000 | 28.180 12.628 21.286 |  0.000  0.001  0.000 | 26.054\n",
-    " 900000 | 30.781 14.205 26.176 |  0.000  0.000  0.017 | 31.078\n",
-    "1000000 | 34.803 16.431 29.153 |  0.000  0.001  0.016 | 34.575\n",
-    "```\n",
-    "\n",
-    "\n",
-    "Mid 2014 MacBook Pro with 2.6 GHz Intel Core i5 and 8 GB RAM:\n",
-    "\n",
-    "```\n",
-    " 100000 |  3.508  1.600  4.014 |  0.008  0.004  0.005 |  3.660\n",
-    " 200000 |  8.407  2.853  7.150 |  0.006  0.004  0.005 |  7.057\n",
-    " 300000 | 11.624  4.477 10.934 |  0.006  0.004  0.005 |  9.613\n",
-    " 400000 | 16.723  6.327 15.328 |  0.007  0.004  0.005 | 13.463\n",
-    " 500000 | 22.370  8.158 18.752 |  0.007  0.004  0.005 | 17.582\n",
-    " 600000 | 26.293 10.046 23.697 |  0.007  0.004  0.005 | 20.960\n",
-    " 700000 | 30.832 12.099 28.383 |  0.008  0.004  0.006 | 24.593\n",
-    " 800000 | 37.189 14.227 32.229 |  0.008  0.004  0.005 | 27.305\n",
-    " 900000 | 40.909 16.261 34.749 |  0.008  0.004  0.005 | 35.873\n",
-    "1000000 | 46.114 19.159 41.113 |  0.008  0.004  0.006 | 35.620\n",
-    "```\n",
-    "\n",
-    "Let's compare the running on Google Colab in different settings. This is the most recent run on November 26, 2024 where the CPU is Intel(R) Xeon(R) CPU @ 2.20GHz\n",
-    "on Python 3.10.12:\n",
-    "\n",
-    "```\n",
-    " 100000 |  2.980  1.361  2.561 |  0.007  0.003  0.005 |  3.801\n",
-    " 200000 |  6.925  3.419  6.632 |  0.007  0.003  0.004 |  6.454\n",
-    " 300000 | 11.023  5.856 10.438 |  0.007  0.004  0.005 | 10.545\n",
-    " 400000 | 16.112  7.568 15.027 |  0.007  0.004  0.005 | 14.083\n",
-    " 500000 | 21.305 10.493 17.540 |  0.008  0.004  0.005 | 17.092\n",
-    " 600000 | 25.216 11.802 23.009 |  0.008  0.004  0.005 | 19.816\n",
-    " 700000 | 31.459 13.691 27.213 |  0.008  0.004  0.005 | 24.672\n",
-    " 800000 | 36.653 16.216 33.170 |  0.008  0.004  0.005 | 26.898\n",
-    " 900000 | 41.014 18.760 35.908 |  0.008  0.004  0.005 | 34.367\n",
-    "1000000 | 46.756 21.700 40.825 |  0.008  0.004  0.005 | 35.964\n",
-    "```\n",
-    "\n",
-    "The following was on November 27, 2021 using Google Colab (Intel(R) Xeon(R) CPU @ 2.20GHz) on an un-recorded Python version but should be 3.8 or 3.9 as shown in [https://devguide.python.org/versions/](https://devguide.python.org/versions/):\n",
-    "\n",
-    "```\n",
-    " 100000 |  3.867  1.145  3.501 |  0.006  0.003  0.005 |  3.912\n",
-    " 200000 |  8.256  3.245  7.641 |  0.007  0.004  0.006 |  7.865\n",
-    " 300000 | 12.502  4.615 11.573 |  0.007  0.004  0.005 | 12.012\n",
-    " 400000 | 17.683  6.418 16.296 |  0.008  0.004  0.006 | 15.480\n",
-    " 500000 | 22.426  8.707 20.957 |  0.008  0.004  0.006 | 19.006\n",
-    " 600000 | 27.913 10.976 27.320 |  0.008  0.004  0.006 | 22.747\n",
-    " 700000 | 32.356 13.120 32.044 |  0.008  0.004  0.006 | 28.663\n",
-    " 800000 | 38.028 15.000 35.784 |  0.008  0.004  0.006 | 31.729\n",
-    " 900000 | 44.369 16.787 41.919 |  0.008  0.004  0.006 | 34.442\n",
-    "1000000 | 47.876 19.579 45.709 |  0.008  0.004  0.006 | 40.508\n",
-    "```\n",
-    "\n",
-    "Finally, the following is done on a MacBook Air (2013) with 1.30 GHz Intel Core i5. But this is on a Linux distro called Ubuntu 21.10. The experiments were conducted on December 8, 2022 using Jupyter notebook with Python 3.9.7.\n",
-    "\n",
-    "```\n",
-    " 100000 |  2.831  1.213  2.682 |  0.006  0.003  0.004 |  2.568\n",
-    " 200000 |  6.480  2.793  5.579 |  0.005  0.003  0.004 |  5.152\n",
-    " 300000 | 10.367  4.507  9.609 |  0.006  0.003  0.004 |  8.077\n",
-    " 400000 | 13.689  6.374 18.599 |  0.009  0.005  0.007 | 17.443\n",
-    " 500000 | 19.350  7.430 16.970 |  0.007  0.004  0.005 | 15.099\n",
-    " 600000 | 24.454 12.923 31.373 |  0.008  0.004  0.006 | 21.950\n",
-    " 700000 | 30.491 11.816 25.521 |  0.006  0.003  0.005 | 19.822\n",
-    " 800000 | 31.134 14.268 29.183 |  0.006  0.004  0.005 | 25.155\n",
-    " 900000 | 35.490 16.478 30.769 |  0.006  0.003  0.005 | 23.973\n",
-    "1000000 | 38.142 18.879 33.845 |  0.007  0.003  0.004 | 27.126\n",
-    "```"
+    "As a way of comparison, we can find [past results](https://github.com/gisalgs/notebooks/blob/main/computational-issues-past-results.md) at the github repo. It is interesting to see how performance varies among computers and even Python versions.\n"
    ]
   },
   {
@@ -629,6 +488,7 @@
     "myresults = [ \n",
     "(100000, 25, 0.00013082027435302735, 0.015203642845153808),\n",
     "(100000, 50, 0.0003963470458984375, 0.015846920013427735)\n",
+    "]\n",
     "```\n",
     "\n",
     "This will create a valid Python data structure that allows us to do necessary calculation. Please also note that the time reported here is the average time per query, so it is important to account for the number of runs when computing the total time. You will need to examine the original code to see how the average is calculated."
@@ -651,7 +511,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, at this point, we have a lot of data in `results` to visualize. Here we show the dominating trends in the data using a subset of the results."
+    "Now, at this point, we have a lot of data in `results` to visualize. Here we show the dominating trends in the data using a subset of the results. More specifically, we want to draw a series of 10 plots in a row where each corresponds to one of the 10 sizes (from 100 K to 1 million). On each plot, the horizontal axis is the width of rectangle (from 25 to 800) and the vertical is the time. To do so, we need to reorganize the data in `results` into a dictionary where the keys are the data sizes, and each key is associated with a list of three values: width in hundreds, time for k-D tree, and time for linear search. We initialize the dictionary using a dictionary comprehension with empty lists and then append the corresponding values from `results` using a loop:"
    ]
   },
   {
@@ -660,131 +520,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = [ r[0]/1000 for r in results if r[1]==25]\n",
-    "t100 = [ r[2] for r in results if r[1]==100]\n",
-    "t200 = [ r[2] for r in results if r[1]==200]\n",
-    "t800 = [ r[2] for r in results if r[1]==800]\n",
-    "tl100 = [ r[3] for r in results if r[1]==100]\n",
-    "tl200 = [ r[3] for r in results if r[1]==200]\n",
-    "tl800 = [ r[3] for r in results if r[1]==800]\n",
+    "new_data = {w: [[], [], []] for w in range(100000, 1000001, 100000)}\n",
     "\n",
-    "plt.plot(x, t800, color='k', label='800 k-D tree')\n",
-    "plt.plot(x, tl800, color='r', label='800 Linear')\n",
-    "plt.plot(x, tl200, color='g', label='200 Linear')\n",
-    "plt.plot(x, tl100, color='b', label='100 Linear')\n",
-    "plt.plot(x, t200, color='y', label='200 k-D tree')\n",
-    "plt.plot(x, t100, color='brown', label='100 k-D tree')\n",
-    "\n",
-    "plt.legend(loc='upper left')\n",
-    "plt.xlabel('Number of points (x1000)')\n",
-    "plt.ylabel('Seconds')\n",
-    "plt.title('Search time')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In the above figure, the numbers in the legend refer to the size of the rectangle. We always use a squire in this test and the overall area is a 990x990 box. It appears that a rectangle of 800x800 takes most of the entire area and therefore takes a lot of time to get the points, more than linear search. However, for other rectangle sizes, the use of k-D tree seems to be beneficial. \n",
-    "\n",
-    "We now examine the result from another perspective: how the size of the rectangle affects performance? We first pull out the results for the data of 1,000,000 points. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xs = []\n",
-    "ttree = []\n",
-    "tlinear = []\n",
-    "for r in results:\n",
-    "    if r[0]==1000000:\n",
-    "        xs.append(r[1])\n",
-    "        ttree.append(r[2])\n",
-    "        tlinear.append(r[3])\n",
-    "\n",
-    "plt.plot(xs, ttree, color='k', label='k-D tree')\n",
-    "plt.plot(xs, tlinear, color='r', label='Linear')\n",
-    "\n",
-    "plt.legend(loc='upper left')\n",
-    "plt.xlabel('Width of rectangle')\n",
-    "plt.ylabel('Search time (Seconds)')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The above figure is interesting: the use of k-D tree will become more computationally expensive when the size of rectangle is greater than about 500x500. How about other settings? Below, we try to pull all the results and re-organize them into a different structure. More specifically, we use a Python dictionary to organize. We use the data size (number of points) as the key to build the dictionary. For each key, we store three lists: the lists of rectangle sizes, time used by the k-D tree, and by the linear search."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_data = {}\n",
-    "sizes = range(100000, 1000001, 100000)\n",
-    "for w in sizes:\n",
-    "    new_data[w] = [[], [], []]    \n",
+    "# Can also be done using the following:\n",
+    "# new_data = {}\n",
+    "# sizes = range(100000, 1000001, 100000)\n",
+    "# for w in sizes:\n",
+    "#     new_data[w] = [[], [], []]    \n",
     "\n",
     "for r in results:\n",
     "    w = r[0]\n",
-    "    new_data[w][0].append(r[1]/100)\n",
+    "    new_data[w][0].append(r[1]/100) # width in hundreds\n",
     "    new_data[w][1].append(r[2])\n",
     "    new_data[w][2].append(r[3])"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "With the newly organized results (as saved in new_data), we can now put all the lines together in one figure. This is not necessarily the best way to draw things, but a quick way."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for w in sizes:\n",
-    "    plt.plot(new_data[w][0], new_data[w][1], color='k', label='k-D tree')\n",
-    "    plt.plot(new_data[w][0], new_data[w][2], color='r', label='Linear')\n",
+    "sizes = list(new_data.keys())\n",
     "\n",
-    "#plt.legend(loc='upper left')\n",
-    "plt.xlabel('Width of rectangle (x100)')\n",
-    "plt.ylabel('Search time (Seconds)')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The above figure is quick and fun, but not very much useful in reading it. The following illustrate is a remake using the same data and is stunningly effective in showing the intrinsic trends!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "numsubplots = len(sizes)\n",
-    "\n",
-    "_, axs = plt.subplots(1, numsubplots, sharey=True)\n",
     "panel_label_y = 1.1 * max(new_data[sizes[-1]][1]) # get Y position of panel labels\n",
     "\n",
-    "i = 0\n",
-    "for w in sizes:\n",
+    "_, axs = plt.subplots(1, len(sizes), sharey=True)\n",
+    "\n",
+    "for i in range(len(sizes)):\n",
+    "    w = sizes[i]\n",
     "    axs[i].plot(new_data[w][0], new_data[w][1], color='grey', label='k-D tree')\n",
     "    axs[i].plot(new_data[w][0], new_data[w][2], color='r', label='Linear')\n",
     "    #plt.xticks([sizes[j]/100 for j in range(len(sizes)) if j%3==0])\n",
